# COMP565-LDSC-FINEMAP

./: COMP565_A1_finemap.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: COMP565_A1_ldsr-checkpoint.ipynb
